src/views/NewsView/NewsView.scss
@import 'variables';

.wrapper {
  margin-bottom: 2rem;

  img {
    margin-bottom: 1rem;
    max-width: 100%;
    width: auto;
  }
}

.inline-img-left {
  float: left;
  margin-right: 1rem;
}

.inline-img-right {
  float: right;
  margin-left: 1rem;
}

.youtube {
  text-align: center;
  width: 100%;

  iframe {
    height: 250px;
    width: 100%;

    @media (min-width: 550px) {
      height: 281px;
      width: 500px;
    }
  }
}

.img-wrap {
  text-align: center;
  width: 100%;
}

.img-border {
  border: 1px solid $gray;
}

.info-block {
  margin-bottom: 1rem;

  p {
    margin-bottom: 0;
  }
}

.news-group {
  border-bottom: 1px solid $gray;
  margin-bottom: 2rem;
  padding-bottom: 1rem;
}

.news {

  .news-group:last-child {
    border-bottom: 0;
  }
}

.center {
  text-align: center;
}

.justify {
  text-align: justify;
}

.outreach-links {
  margin-bottom: 1rem;
  width: 100%;
}

.italic {
  font-style: italic;
}

.pres {
  margin-bottom: 1rem;

  p {
    margin: 0;
  }
}

